# mlml-clients

./: .gitignore
newclient/: batch_process.sh  client.py  commands.sh  download_mosaic_bert.py  modify_bert_vocabulary.py  predict.py  train_client.py  utils.py
newclient/run_configs/: bert_hyper_predict_efcamdat_test_data.json  c4200m_predict.json  c4200m_predict_efcamdat_test_data.json  download_bert_base_uncased.json  download_mosaic_bert_base.json  download_xlm_roberta_base.json  predict.json  train.json  train_bert_on_C4200m_all.json  train_bert_on_cleaned_efcamdat_A2.json  train_bert_on_cleaned_efcamdat_B1.json  train_bert_on_cleaned_efcamdat_B2.json  train_bert_on_cleaned_efcamdat_C1.json  train_bert_on_cleaned_efcamdat_all.json  train_cleaned_efcamdat_A1.json  train_full_efcamdat_gt_5_tokens.json  train_mosaic_bert_base_on_cleaned_efcamdat_all.json  train_xlm_roberta_base_on_cleaned_efcamdat_all.json
pipclient/run_configs/: train.json
poetryclient/: client.py  pyproject.toml
poetryclient/run_configs/: download_distillbert.json  train.json
